feat: migrate to uv/Docker, overhaul rubric UI, and fix deletion bugs
- Replaced Nix/Flake with uv for Python and Docker Compose for PostgreSQL 17.
- Modernized Rubric Detail page UI using Shadcn/UI and resolved layout scrolling issues.
- Implemented CASCADE deletion for rubrics and associated grading data.
- Fixed backend/frontend synchronization for score constraints and API responses.
- Performed comprehensive documentation audit and repository cleanup.

--- a/docs/troubleshooting/2026-01-fixes.md
+++ b/docs/troubleshooting/2026-01-fixes.md
@@ -525,6 +525,104 @@ psql -h localhost -U postgres -d essaycoach -c "\d+ rubric_level_desc"
 
 ---
 
+## Issue #9: Rubric Deletion Failure (RestrictedError)
+
+**Date**: January 21, 2026
+**Category**: Backend / Database
+**Severity**: Medium (Maintenance blocked)
+
+### Symptoms
+
+- Attempting to delete a Rubric via API or Django Admin fails
+- Error: `django.db.models.deletion.ProtectedError` (or similar `RestrictedError`)
+- Root cause: Rubric is referenced by existing Tasks, which are referenced by Submissions
+
+### Solution
+
+**Switched to CASCADE Deletion**:
+Modified `backend/core/models.py` to use `on_delete=models.CASCADE` for core relationships:
+- `RubricItem` -> `MarkingRubric`
+- `RubricLevelDesc` -> `RubricItem`
+- `Task` -> `MarkingRubric`
+- `Submission` -> `Task`
+- `Feedback` -> `Submission`
+
+This ensures that deleting a parent entity (like a Rubric) automatically cleans up all dependent records, preventing orphaned data and restricted errors during maintenance.
+
+### Prevention
+
+**Rule Added to AGENTS.md**:
+> The database schema uses **CASCADE** deletion for core relationships. Always warn users before deleting entities that have dependent records.
+
+---
+
+## Issue #10: Frontend Scrolling Blocked by Layout Height
+
+**Date**: January 22, 2026
+**Category**: Frontend / UI
+**Severity**: Medium (UX issue)
+
+### Symptoms
+
+- Dashboard main content area does not scroll
+- Content at the bottom of long pages (e.g., Rubric details) is cut off and inaccessible
+- Sidebar remains fixed, but scroll events on the main area are ignored
+
+### Root Cause
+
+The flexbox layout in `src/app/dashboard/layout.tsx` lacked explicit height constraints and overflow rules for the scrollable container.
+
+### Solution
+
+Updated the main content container in `frontend/src/app/dashboard/layout.tsx`:
+```tsx
+<main className="flex-1 overflow-y-auto max-h-[calc(100vh-theme(spacing.16))]">
+  <div className="p-6">
+    {children}
+  </div>
+</main>
+```
+
+### Prevention
+
+**Rule Added to AGENTS.md**:
+> If dashboard content is cut off or scrolling is blocked, ensure the container has `max-h-[calc(100vh-theme(spacing.16))]` and `overflow-y-auto`.
+
+---
+
+## Issue #11: SyntaxError on 204 No Content Responses
+
+**Date**: January 22, 2026
+**Category**: Frontend / API
+**Severity**: Low (Functional bug)
+
+### Symptoms
+
+- Console error: `SyntaxError: Unexpected end of JSON input`
+- Occurs when performing successful DELETE or status updates
+- Network tab shows `204 No Content` status, but the service layer fails
+
+### Root Cause
+
+The frontend service layer was calling `response.json()` on every response, but a `204 No Content` response has an empty body, which is not valid JSON.
+
+### Solution
+
+Updated `frontend/src/service/api/request.ts` (or individual service calls):
+```typescript
+if (response.status === 204) {
+  return null;
+}
+return response.json();
+```
+
+### Prevention
+
+**Rule Added to AGENTS.md**:
+> Handle `204 No Content` responses safely by checking `response.status === 204` before calling `.json()`.
+
+---
+
 ## Summary of Fixes Applied
 
  | Issue | Component | Root Cause | Status |
@@ -537,6 +635,9 @@ psql -h localhost -U postgres -d essaycoach -c "\d+ rubric_level_desc"
  | #6 | Frontend/Network | Proxy redirect loop | ✅ Documented |
  | #7 | Frontend/Network | IPv6/IPv4 resolution | ✅ Documented |
  | #8 | Backend/DB | Rubric constraint violation | ✅ Resolved |
+ | #9 | Backend/DB | Restricted deletion error | ✅ Resolved |
+ | #10 | Frontend/UI | Scrolling layout issue | ✅ Resolved |
+ | #11 | Frontend/API | 204 JSON parse error | ✅ Resolved |
 
 ## Post-Fix Verification Checklist
 
@@ -544,19 +645,18 @@ After applying these fixes, verify the following:
 
 - [ ] Frontend dev server starts without hanging
 - [ ] No duplicate node_modules directories exist
-- [ ] `pg-connect` command succeeds
 - [ ] Django backend starts without database errors
 - [ ] Login flow sets `access_token` cookie
 - [ ] `/api/v1/auth/me/` returns authenticated user data
 - [ ] AI feedback workflow executes successfully
-- [ ] DIFY_API_KEY is properly loaded in backend
 - [ ] API calls succeed without "Failed to fetch" errors
 - [ ] No "Too Many Redirects" errors in browser console
 - [ ] Frontend connects to backend using IPv4 address
-- [ ] Sentry tunneling doesn't conflict with API Routes
 - [ ] Rubric import with "No submission" levels (0-0) succeeds
-- [ ] Rubric import rejects invalid score ranges where min > max
-- [ ] Database constraint `min_max_ck` allows equality (<=) for rubric levels
+- [ ] Deleting a Rubric successfully removes dependent Tasks and Submissions
+- [ ] Dashboard content area scrolls properly on long pages
+- [ ] DELETE requests return success without JSON parsing errors
+
 
 ---
 
